--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-windows-addon",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.1.0",
+  "description": "Optimize performance on Windows",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -22,22 +22,34 @@
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
     "ember-cli": "0.1.12",
     "ember-cli-6to5": "^3.0.0",
+    "ember-cli-app-version": "0.3.1",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.7",
+    "ember-cli-divshot": "^0.1.7",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.1",
-    "ember-cli-app-version": "0.3.1",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "grunt": "^0.4.5",
+    "grunt-jscodesniffer": "^0.1.8",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jscs": "^0.8.1",
+    "load-grunt-tasks": "^1.0.0"
   },
   "keywords": [
     "ember-addon"
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "dependencies": {
+    "chalk": "^1.0.0",
+    "ember-cli-windows": "^1.0.2",
+    "rsvp": "^3.0.17",
+    "touch": "0.0.3"
   }
 }
