Simplify post-install script to also work on non-cmd terminals
Fixes #12

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "ember server",
     "build": "ember build",
     "test": "ember test",
-    "postinstall": "( ver 2>NUL | find \"Windows\"> NUL ) && ( where ember >NUL 2>&1 && ember windows || echo Please execute `ember windows` after installing the Ember CLI ) || echo ember-cli-windows-addon is unnecessary as you are not running on Windows"
+    "postinstall": "ember windows || echo If running on Windows, please execute 'ember windows' from the Ember CLI"
   },
   "repository": {
     "type": "git",
